added function to get to last page

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         class="nav-icons py-3 d-flex justify-content-around align-items-center"
                     >
                         <i
-                            class="disabled pointer end fs-2 fa-solid fa-angles-left"
+                            class="disabled pointer start fs-2 fa-solid fa-angles-left"
                         ></i>
                         <i
                             class="disabled pointer prev fs-2 fa-solid fa-arrow-left"
@@ -87,12 +87,12 @@
                             class="pointer next fs-2 fa-solid fa-arrow-right"
                         ></i>
                         <i
-                            class="pointer start fs-2 fa-solid fa-angles-right"
+                            class="pointer end fs-2 fa-solid fa-angles-right"
                         ></i>
                     </div>
                     <div class="text-center">
                         <div class="pb-3">
-                            N° di Pokémon da mostrare per pagina (max. 20)
+                            N° di Pokémon da mostrare per pagina
                         </div>
                         <div class="d-flex justify-content-center">
                             <input
