added dynamically printed page select values

--- a/index.html
+++ b/index.html
@@ -84,14 +84,14 @@
                         </div>
                         <div class="d-flex justify-content-center">
                             <select
-                                class="form-select h-100 w-25 mx-2"
+                                class="form-select h-100 w-50 mx-2"
                                 name="pages"
                                 id="page-select"
                             >
-                                <option value="1">Pag 1</option>
+                                <!-- <option value="1">Pag 1</option>
                                 <option value="2">Pag 2</option>
                                 <option value="3">Pag 3</option>
-                                <option value="4">Pag 4</option>
+                                <option value="4">Pag 4</option> -->
                             </select>
                             <input
                                 type="text"
