--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
         <main class="py-5 d-none">
             <div
-                class="results-wrapper container d-flex align-items-center justify-content-evenly p-4 h-75"
+                class="results-wrapper container d-flex align-items-center justify-content-around p-4 h-75"
             >
                 <div class="h-100">
                     <ul id="list-results" class="p-5 h-100">
