adjusted layout and colors

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
         <main class="py-5 d-none">
             <div
-                class="results-wrapper container d-flex align-items-center justify-content-around p-4 h-75"
+                class="results-wrapper container d-flex align-items-center justify-content-evenly p-4 h-75"
             >
                 <div class="h-100">
                     <ul id="list-results" class="p-5 h-100">
@@ -82,7 +82,7 @@
                         <div class="pb-3">
                             N° di Pokémon da mostrare per pagina
                         </div>
-                        <div class="d-flex justify-content-center">
+                        <div class="d-flex justify-content-center align-items-center">
                             <select
                                 class="form-select h-100 w-50 mx-2"
                                 name="pages"
