--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     type="text"
                     placeholder="Cerca un Pokémon!"
                 />
-                <button type="button" class="search btn btn-dark main-font">
+                <button type="button" class="search btn btn-primary main-font">
                     Cerca
                 </button>
             </div>
@@ -54,7 +54,7 @@
                 class="results-wrapper container d-flex align-items-center justify-content-evenly p-4 h-75"
             >
                 <div class="h-100">
-                    <ul id="list-results" class="p-5 h-100">
+                    <ul id="list-results" class="p-5 mb-2 h-100">
                         <!-- <li>
                             
                         </li> -->
@@ -69,7 +69,7 @@
                             class="disabled pointer prev fs-2 fa-solid fa-arrow-left"
                         ></i>
 
-                        <span class="page-display"></span>
+                        <span class="page-display fw-bold"></span>
 
                         <i
                             class="pointer next fs-2 fa-solid fa-arrow-right"
@@ -79,7 +79,7 @@
                         ></i>
                     </div>
                     <div class="text-center">
-                        <div class="pb-3">
+                        <div class="pb-3 fw-bold">
                             N° di Pokémon da mostrare per pagina
                         </div>
                         <div class="d-flex justify-content-center align-items-center">
@@ -99,7 +99,7 @@
                                 id="limit-input"
                                 class="form-control w-25 me-2"
                             />
-                            <button id="input-limit-btn" class="btn btn-dark">
+                            <button id="input-limit-btn" class="btn btn-primary">
                                 Invio
                             </button>
                         </div>
