removed page navigation when searching by name through searchbar

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 class="results-wrapper container d-flex align-items-center justify-content-evenly p-4 h-75"
             >
                 <div class="h-100 d-flex flex-column align-self-start justify-content-between">
-                    <ul id="list-results" class="p-5 mb-2 h-100">
+                    <ul id="list-results" class="p-5 mb-2">
                         <!-- <li>
                             
                         </li> -->
