converted language to english

--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
                     id="search-bar"
                     class="main-font form-control w-50 mx-2"
                     type="text"
-                    placeholder="Cerca un Pokémon!"
+                    placeholder="Search for a Pokémon!"
                 />
                 <button type="button" class="search btn btn-primary main-font">
-                    Cerca
+                    Search
                 </button>
             </div>
         </header>
@@ -81,7 +81,7 @@
                         </div>
                         <div class="text-center">
                             <div class="pb-3 fw-bold">
-                                N° di Pokémon da mostrare per pagina
+                                N° of Pokémon per page
                             </div>
                             <div
                                 class="d-flex justify-content-center align-items-center"
@@ -106,7 +106,7 @@
                                     id="input-limit-btn"
                                     class="btn btn-primary"
                                 >
-                                    Invio
+                                    Go
                                 </button>
                             </div>
                         </div>
